iptables_save20200227
# Generated by iptables-save v1.8.3 on Thu Feb 27 11:26:51 2020
*nat
:PREROUTING ACCEPT [1002:84539]
:INPUT ACCEPT [799:61900]
:OUTPUT ACCEPT [400:31476]
:POSTROUTING ACCEPT [434:35325]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_direct - [0:0]
:POST_FedoraWorkstation - [0:0]
:POST_FedoraWorkstation_allow - [0:0]
:POST_FedoraWorkstation_deny - [0:0]
:POST_FedoraWorkstation_log - [0:0]
:POST_FedoraWorkstation_post - [0:0]
:POST_FedoraWorkstation_pre - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraWorkstation - [0:0]
:PRE_FedoraWorkstation_allow - [0:0]
:PRE_FedoraWorkstation_deny - [0:0]
:PRE_FedoraWorkstation_log - [0:0]
:PRE_FedoraWorkstation_post - [0:0]
:PRE_FedoraWorkstation_pre - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES
-A POSTROUTING_ZONES -o eno1 -g POST_FedoraWorkstation
-A POSTROUTING_ZONES -g POST_FedoraWorkstation
-A POST_FedoraWorkstation -j POST_FedoraWorkstation_pre
-A POST_FedoraWorkstation -j POST_FedoraWorkstation_log
-A POST_FedoraWorkstation -j POST_FedoraWorkstation_deny
-A POST_FedoraWorkstation -j POST_FedoraWorkstation_allow
-A POST_FedoraWorkstation -j POST_FedoraWorkstation_post
-A PREROUTING_ZONES -i eno1 -g PRE_FedoraWorkstation
-A PREROUTING_ZONES -g PRE_FedoraWorkstation
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_pre
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_log
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_deny
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_allow
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_post
COMMIT
# Completed on Thu Feb 27 11:26:51 2020
# Generated by iptables-save v1.8.3 on Thu Feb 27 11:26:51 2020
*mangle
:PREROUTING ACCEPT [6874:8844735]
:INPUT ACCEPT [11022:9400106]
:FORWARD ACCEPT [56:3016]
:OUTPUT ACCEPT [10329:9063513]
:POSTROUTING ACCEPT [10385:9066529]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraWorkstation - [0:0]
:PRE_FedoraWorkstation_allow - [0:0]
:PRE_FedoraWorkstation_deny - [0:0]
:PRE_FedoraWorkstation_log - [0:0]
:PRE_FedoraWorkstation_post - [0:0]
:PRE_FedoraWorkstation_pre - [0:0]
:V2RAY - [0:0]
:V2RAY_MARK - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES
-A PREROUTING -j V2RAY
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A OUTPUT -j V2RAY_MARK
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -i eno1 -g PRE_FedoraWorkstation
-A PREROUTING_ZONES -g PRE_FedoraWorkstation
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_pre
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_log
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_deny
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_allow
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_post
-A V2RAY -d 34.97.188.125/32 -j RETURN
-A V2RAY -d 35.185.135.116/32 -j RETURN
-A V2RAY -d 34.92.247.6/32 -j RETURN
-A V2RAY -d 127.0.0.1/32 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 255.255.255.255/32 -j RETURN
-A V2RAY -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY -p udp -j TPROXY --on-port 55555 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY -p tcp -j TPROXY --on-port 55555 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY_MARK -d 34.97.188.125/32 -j RETURN
-A V2RAY_MARK -d 35.185.135.116/32 -j RETURN
-A V2RAY_MARK -d 34.92.247.6/32 -j RETURN
-A V2RAY_MARK -d 224.0.0.0/4 -j RETURN
-A V2RAY_MARK -d 255.255.255.255/32 -j RETURN
-A V2RAY_MARK -d 192.168.0.0/16 -p tcp -j RETURN
-A V2RAY_MARK -d 192.168.0.0/16 -p udp -m udp ! --dport 53 -j RETURN
-A V2RAY_MARK -m mark --mark 0xff -j RETURN
-A V2RAY_MARK -p udp -j MARK --set-xmark 0x1/0xffffffff
-A V2RAY_MARK -p tcp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Thu Feb 27 11:26:51 2020
# Generated by iptables-save v1.8.3 on Thu Feb 27 11:26:51 2020
*raw
:PREROUTING ACCEPT [16897:12119880]
:OUTPUT ACCEPT [13961:9473890]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraWorkstation - [0:0]
:PRE_FedoraWorkstation_allow - [0:0]
:PRE_FedoraWorkstation_deny - [0:0]
:PRE_FedoraWorkstation_log - [0:0]
:PRE_FedoraWorkstation_post - [0:0]
:PRE_FedoraWorkstation_pre - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -i eno1 -g PRE_FedoraWorkstation
-A PREROUTING_ZONES -g PRE_FedoraWorkstation
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_pre
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_log
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_deny
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_allow
-A PRE_FedoraWorkstation -j PRE_FedoraWorkstation_post
-A PRE_FedoraWorkstation_allow -p udp -m udp --dport 137 -j CT --helper netbios-ns
COMMIT
# Completed on Thu Feb 27 11:26:51 2020
# Generated by iptables-save v1.8.3 on Thu Feb 27 11:26:51 2020
*security
:INPUT ACCEPT [16463:12077414]
:FORWARD ACCEPT [261:23460]
:OUTPUT ACCEPT [13955:9471410]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Thu Feb 27 11:26:51 2020
# Generated by iptables-save v1.8.3 on Thu Feb 27 11:26:51 2020
*filter
:INPUT ACCEPT [16285:12052934]
:FORWARD ACCEPT [261:23460]
:OUTPUT ACCEPT [13806:9455481]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:FORWARD_direct - [0:0]
:FWDI_FedoraWorkstation - [0:0]
:FWDI_FedoraWorkstation_allow - [0:0]
:FWDI_FedoraWorkstation_deny - [0:0]
:FWDI_FedoraWorkstation_log - [0:0]
:FWDI_FedoraWorkstation_post - [0:0]
:FWDI_FedoraWorkstation_pre - [0:0]
:FWDO_FedoraWorkstation - [0:0]
:FWDO_FedoraWorkstation_allow - [0:0]
:FWDO_FedoraWorkstation_deny - [0:0]
:FWDO_FedoraWorkstation_log - [0:0]
:FWDO_FedoraWorkstation_post - [0:0]
:FWDO_FedoraWorkstation_pre - [0:0]
:INPUT_ZONES - [0:0]
:INPUT_direct - [0:0]
:IN_FedoraWorkstation - [0:0]
:IN_FedoraWorkstation_allow - [0:0]
:IN_FedoraWorkstation_deny - [0:0]
:IN_FedoraWorkstation_log - [0:0]
:IN_FedoraWorkstation_post - [0:0]
:IN_FedoraWorkstation_pre - [0:0]
:OUTPUT_direct - [0:0]
COMMIT
# Completed on Thu Feb 27 11:26:51 2020
